@@ -26,6 +26,7 @@ PHP                                                                        NEWS
 - Added MDTM support to ftp_url_stat. (Sara)
 - Added zlib stream filter support. (Sara)
 - Added bz2 stream filter support. (Sara)
+- Added HTTP/1.1 and chunked encoding support to http:// wrapper. (Sara)
 - Added support of parameter->value arrays to xsl_xsltprocessor_set_parameter() 
   (Tony)
 - Fixed bug with raw_post_data not getting set. (Brian)
